--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react-router": "^3.0.2"
   },
   "devDependencies": {
+    "fs-extra": "^2.0.0",
+    "gh-pages": "^0.12.0",
     "react-scripts": "0.9.3"
   },
   "scripts": {
