--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "react-charts",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "fs-extra": "^1.0.0",
+    "gh-pages": "^0.12.0",
+    "react-scripts": "0.9.3"
+  },
   "dependencies": {
+    "material-ui": "^0.16.3",
     "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2"
-  },
-  "devDependencies": {
-    "fs-extra": "^2.0.0",
-    "gh-pages": "^0.12.0",
-    "react-scripts": "0.9.3"
+    "react-router": "^3.0.2",
+    "react-tap-event-plugin": "^2.0.0",
+    "react-google-charts": "^1.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
