--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "react-scripts": "0.9.3"
   },
   "dependencies": {
-    "material-ui": "^0.16.3",
     "lodash": "^4.17.4",
+    "material-ui": "^0.16.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-fontawesome": "^1.5.0",
+    "react-google-charts": "^1.5.3",
     "react-router": "^3.0.2",
-    "react-tap-event-plugin": "^2.0.0",
-    "react-google-charts": "^1.5.3"
+    "react-tap-event-plugin": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
